deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2021-12-12T20:53:25Z"
  generation: 1
  labels:
    app: hello-world-rest-api
  name: hello-world-rest-api
  namespace: default
  resourceVersion: "1553"
  uid: 752a393a-ba87-4dd5-b2dd-c63bb36896bb
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: hello-world-rest-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hello-world-rest-api
    spec:
      containers:
      - image: gilbertoewaldf/algamoney-api:latest
        imagePullPolicy: IfNotPresent
        name: algamoney-api
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: "2021-12-12T20:53:34Z"
    lastUpdateTime: "2021-12-12T20:53:34Z"
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: "2021-12-12T20:53:25Z"
    lastUpdateTime: "2021-12-12T20:53:34Z"
    message: ReplicaSet "hello-world-rest-api-c9c5845b7" has successfully progressed.
    reason: NewReplicaSetAvailable
    status: "True"
    type: Progressing
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updatedReplicas: 1


# service type loadbalancer       
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: "2021-12-12T21:24:55Z"
  finalizers:
  - service.kubernetes.io/load-balancer-cleanup
  labels:
    app: hello-world-rest-api
  name: hello-world-rest-api
  namespace: default
  resourceVersion: "4238"
  uid: 06948633-246f-4ffb-ad27-d86fd780b8f1
spec:
  clusterIP: 10.0.132.118
  clusterIPs:
  - 10.0.132.118
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30100
    port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: hello-world-rest-api
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 20.67.181.141
