ingress_azure.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gateway-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
  - http:
      paths:
      - path: /algamoney(/|$)(.*)
        pathType: Prefix
        backend:
          serviceName: hello-world-rest-api
          servicePort: 5000
